# ggis598

./: .gitattributes  .gitmodules  Dockerfile  README.md  galileo  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
data/: config  models
experiment/: beaker_args.py  beaker_evaluate.py  beaker_finetune.py  beaker_h5pys.py
lfmc/common/: const.py  filter.py  labels.py
lfmc/core/: bands.py  const.py  dataset.py  eval.py  finetuning.py  hyperparameters.py  padding.py  splits.py
lfmc/main/: analyze_csv.py  augment_labels.py  create_csv.py  create_h5pys.py  evaluate_model.py  finetune_model.py
lfmc/model/: dataset.py  eval.py  finetuning.py  labels.py  mode.py  splits.py
lfmc/prepare/: analyze_csv.py  augment_labels.py  create_csv.py  create_h5pys.py
lfmc/train/: evaluate_model.py  finetune_model.py
tests/: conftest.py
tests/common/: test_copy.py
tests/core/: test_dataset.py  test_eval.py
tests/model/: conftest.py  test_dataset.py  test_eval.py
