[project]
name = "lfmc"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
create-csv = "lfmc.prepare.create_csv:main"
analyze-csv = "lfmc.prepare.analyze_csv:main"
finetune-model = "lfmc.train.finetune_model:main"

[tool.setuptools]
packages = ["lfmc"]

[tool.ruff]
exclude = ["galileo/", "lib/"]
line-length = 120
lint.extend-select = ["I", "TID252"]
