[project]
name = "lfmc"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
analyze-csv = "lfmc.main.analyze_csv:main"
augment-labels = "lfmc.main.augment_labels:main"
create-csv = "lfmc.main.create_csv:main"
create-h5pys = "lfmc.main.create_h5pys:main"
evaluate-model = "lfmc.main.evaluate_model:main"
finetune-model = "lfmc.main.finetune_model:main"

[tool.setuptools]
packages = ["galileo", "lfmc"]

[tool.ruff]
exclude = ["galileo/", "lib/"]
line-length = 120
lint.extend-select = ["I", "TID252"]
